--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/favicon_io (1)/favicon.ico" />
     <link rel="stylesheet" href="./app.css" />
     <title>Personal Website</title>
   </head>
@@ -20,13 +21,12 @@
         <h2>Python Developer</h2>
       </div>
     </div>
-
     <hr />
     <h1><span>Work Experience</span></h1>
     <table>
       <tbody>
         <td><strong> Python Developer </strong></td>
-        <td class="right-td">5/2022 - Current</td>
+        <td class="pyBody">4/2022 - Current</td>
       </tbody>
     </table>
     <ul>
@@ -35,12 +35,12 @@
       <li>Roles and Responsibilities of Application Developers</li>
     </ul>
     <table>
-      <body>
+      <tbody>
         <td><strong>Delivery Driver / Merchandiser </strong></td>
-        <td class="right-td">11/2017 - 8/2021</td>
-      </body>
+        <td class="pyBodys">11/2017 - 8/2021</td>
+      </tbody>
     </table>
-    <ul>
+    <ul class="lower-ul">
       <li>Giving sales presentations to a range of prospective clients</li>
       <li>
         Deliver a wide variety of items to different addresses and through
